<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turntable_hardware_interface</name>
  <version>0.0.0</version>
  <description>Hardware Interface for the custom Turntable.</description>
  <maintainer email="db7529@uw.edu">Devansh A. Bajwala</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin_manifest="turntable_hardware_interface_plugin.xml"/>
  </export>
</package>
